objects/blng__FinanceBook__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Inactive, new transactions can be recorded into this Finance Book but does not affect those transactions already in the book</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriodDuration__c</fullName>
        <inlineHelpText>The duration of the finance period&apos;s date range.</inlineHelpText>
        <label>Finance Period Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__FinancePeriodDuration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PeriodType__c</fullName>
        <inlineHelpText>&quot;Used to classify Finance Books. Can be:
Revenue
Accounting&quot;</inlineHelpText>
        <label>Period Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__FinanceBookPeriodType</valueSetName>
        </valueSet>
    </fields>
    <label>Finance Book</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Default__c</columns>
        <columns>blng__FinancePeriodDuration__c</columns>
        <columns>blng__PeriodType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Finance Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>